<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/sign_in"
        android:textColor="@color/text_color_black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_first_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_first_name"
            style="@style/EditTextHintStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="8dp"
            android:background="@drawable/background_edittext"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/first_name"
            android:textColorHint="@color/text_color_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_last_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_first_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_last_name"
            style="@style/EditTextHintStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="8dp"
            android:background="@drawable/background_edittext"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/last_name"
            android:textColorHint="@color/text_color_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_last_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            style="@style/EditTextHintStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="8dp"
            android:background="@drawable/background_edittext"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/email"
            android:textColorHint="@color/text_color_gray" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/background_button"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_email_layout" />

    <TextView
        android:id="@+id/tv_is_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/text_color_gray"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/btn_signin"
        app:layout_constraintTop_toBottomOf="@id/btn_signin"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/log_in"
        android:textColor="@color/text_color_blue"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_is_account"
        app:layout_constraintTop_toTopOf="@id/tv_is_account"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/image_google"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/image_google"
        app:layout_constraintEnd_toStartOf="@id/tv_signin_google"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_is_account" />

    <TextView
        android:id="@+id/tv_signin_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/text_color_black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_google"
        app:layout_constraintTop_toTopOf="@id/image_google" />


</androidx.constraintlayout.widget.ConstraintLayout>